--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,6 +16,8 @@ sites:
     url: https://react-darkmode.burley.workers.dev/
   - name: "Dan Stroot's Blog"
     url: https://danstroot.com/
+  - name: Site Monitor
+    url: https://dstroot.github.io/vds_uptime/
     
 # Add downtime notifications
 # https://upptime.js.org/docs/notifications
