--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -33,6 +33,7 @@ status-website:
   baseUrl: /vds_uptime
   logoUrl: https://raw.githubusercontent.com/dstroot/vds_uptime/master/icon.svg
   name: VDS Uptime
+  theme: light
   introTitle: "Verite Data Science Uptime"
   introMessage: "INNOVATION, POWERED BY DATA"
   navbar:
