--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,8 +1,8 @@
-# Change these first
-owner: dstroot
-repo: vds_uptime
+# See https://upptime.js.org/docs/configuration
+owner: dstroot      # GitHub username
+repo: vds_uptime    # GitHub repository name
 
-# Add your sites here
+# Site(s) to monitor
 sites:
   - name: Verite Data Science
     url: https://veritedatascience.com/
@@ -18,6 +18,12 @@ sites:
     url: https://danstroot.com/
   - name: Site Monitor
     url: https://dstroot.github.io/vds_uptime/
+  - name: Pacific Life
+    url: https://www.pacificlife.com/
+    
+# Users to assign downtime issues (optional)
+assignees: 
+  - dstroot
     
 # Add downtime notifications
 # https://upptime.js.org/docs/notifications
@@ -31,11 +37,18 @@ status-website:
   # cname: demo.upptime.js.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
   baseUrl: /vds_uptime
+  
   logoUrl: https://raw.githubusercontent.com/dstroot/vds_uptime/master/icon.svg
   name: VDS Uptime
-  theme: light
+  
+  # theme: ocean   # Available themes are light, dark, or ocean.
+  themeUrl: https://modest-panini-61a8ce.netlify.app/theme.css
+  
+  # you can use **markdown** in the fields below
   introTitle: "Verite Data Science Uptime"
   introMessage: "INNOVATION, POWERED BY DATA"
+  
+  # You can customize the navbar top-level navigation links
   navbar:
     - title: Verite Data Science
       href: https://veritedatascience.com/
@@ -45,6 +58,3 @@ status-website:
 i18n:
   footer: Designed and built in California with all the love in the world.
   # footer: This page is [open source]($REPO), powered by [Upptime](https://upptime.js.org)
-
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
